[gd_scene load_steps=5 format=3 uid="uid://44dh76xdsxpd"]

[ext_resource type="PackedScene" uid="uid://cx13reh88ypo6" path="res://ui/custom_nodes/inventory_slot.tscn" id="1_3bgb5"]
[ext_resource type="Texture2D" uid="uid://l5yo3ih8aue8" path="res://textures/panel_blue.png" id="2_8soi8"]
[ext_resource type="Script" path="res://ui/custom_nodes/hotbar_slot.gd" id="3_enkb6"]
[ext_resource type="Texture2D" uid="uid://ci8mr30yoa35j" path="res://textures/panelInset_brown.png" id="3_mhhpc"]

[node name="HotbarSlot" instance=ExtResource("1_3bgb5")]
texture = ExtResource("2_8soi8")
script = ExtResource("3_enkb6")

[node name="NumTextureRect" type="TextureRect" parent="." index="1"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 0
offset_left = -12.0
offset_top = -12.0
offset_right = 20.0
offset_bottom = 20.0
texture = ExtResource("3_mhhpc")
expand_mode = 1

[node name="NumLabel" type="Label" parent="NumTextureRect" index="0"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 22
text = "
"
horizontal_alignment = 1
vertical_alignment = 1
